--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ header {
 }
 
 .item {
+  border-radius: 20px;
   text-align: center;
   border: 1px solid #ccc;
   padding: 20px;
@@ -57,6 +58,7 @@ header {
 }
 
 .item:hover {
+  
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 
@@ -65,6 +67,9 @@ header {
   height: 100px;
   border-radius: 50%;
   margin-bottom: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  margin-left: 40%;
+ 
 }
 
 .item h2 {
@@ -145,4 +150,9 @@ ul {
 li {
   margin-bottom: 10px;
   font-size: 16px;
+}
+@media only screen and (max-width: 600px) {
+  .item img {
+    margin-left: 0;
+  }
 }
