--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
 }
 
 
+
+
 .add-to-cart{
   font-size: 18px;
   font-style: unset;
@@ -119,11 +121,13 @@ header {
 
 .cart {
   margin-top: 20px;
-  border: 1px solid #ccc;
+  border: 0.5px solid #ccc;
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
+  margin-bottom: 90px;
+  border-radius: 15px;
 }
 
 .cart:hover {
@@ -131,6 +135,9 @@ header {
 }
 
 .cart h2 {
+  font-size: xx-large;
+  color: tomato;
+  font-weight: bold;
   margin-top: 0;
   margin-bottom: 20px;
   font-size: 24px;
