--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,8 @@ header {
 }
 
 .tab button.active {
+  font-weight: bold;
+  color: rgb(20, 13, 13);
   background-color: #ccc;
 }
 
@@ -134,6 +136,11 @@ header {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 
+#continue:hover{
+  background: #911212;
+  font-weight: 100;
+  border-radius: 10px;
+}
 .cart h2 {
   font-size: xx-large;
   color: tomato;
